feat: Support custom Substack subdomains
Introduces the ability to specify a Substack subdomain for posting. This allows users to post to their specific Substack publication rather than the default `substack.com` domain.

Changes include:
- Updating `manifest.json` to use a more permissive host permission (`*://*.substack.com/*`).
- Modifying `constants.js` to use a dynamic URL generation function based on the subdomain.
- Refactoring `background.js` to accept the target URL from the message.
- Adding a subdomain input field and associated storage logic in `popup.js` and `popup.html`.
- Adjusting `styles.css` to accommodate the new subdomain input.
- Updating the extension version in `manifest.json`.

--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,13 @@
       <span id="loading-indicator" class="hidden">Processando...</span>
     </header>
 
+    <!-- Subdomain Config -->
+    <div class="config-bar">
+      <label for="subdomain-input">https://</label>
+      <input type="text" id="subdomain-input" placeholder="seu-subdominio">
+      <span class="suffix">.substack.com</span>
+    </div>
+
     <!-- Tabs -->
     <div class="tabs">
       <button id="tab-note" class="tab active">
